syntax = "proto3";
package service;
option go_package = "CS467_SU21/proto/service";

/* gRPC MESSAGE DEFINITIONS */

/* GATEWAY SERVICE */

message StatusRequest{
}

message StatusReply {
  string status = 1;
}

/* PRODUCT SERVICE */

message ProductStatusRequest{}

message ProductStatusReply{
  string status = 1;
}

message ProductIdentifier{
  int64 id = 1;
}

message GetProductsRequest{
  repeated string categories = 1;
  repeated string tags = 2;
  string origin = 3;
}

message StoredProducts{
  repeated StoredProduct products = 1;
}

message LocalProductFamily{
  ProductIdentifier self = 1;
  repeated ProductIdentifier parentProducts = 2;
  repeated ProductIdentifier childProducts = 3;
}

message FullProductFamily{
  ProductIdentifier self = 1;
  repeated LocalProductFamily localProductFamilies = 2;
}

message PutProductRequest{
  ProductIdentifier productIdentifier = 1;
  string name = 2;
  repeated string categories= 3;
  repeated string tags = 4;
  string origin = 5;
  repeated string intermediateDestinations = 6;
  repeated string endDestinations = 7;
  int64 totalQuantity = 8;
  LocalProductFamily localProductFamily = 9;
}

message StoredProduct{
  ProductIdentifier productIdentifier = 1;
  string name = 2;
  repeated string categories= 3;
  repeated string tags = 4;
  string origin = 5;
  repeated string intermediateDestinations = 6;
  repeated string endDestinations= 7;
  map<string, int64> quantityByLocation = 8;
  int64 totalQuantity = 9;
  int64 quantityInTransit = 10;
  LocalProductFamily localProductFamily = 11;
  FullProductFamily fullProductFamily = 12;
}

message ClearProductMessage{
  int64 id = 1;
  repeated string categories= 2;
  repeated string tags = 3;
  string origin = 4;
}